--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="get_verification_code">获取验证码</string>
     <string name="pwd_prompt">密码长度6-20位</string>
     <string name="phone_prompt">输入手机号码</string>
+    <string name="user_agreement">用户协议</string>
 
 </resources>
