--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="account_balance">账户余额</string>
     <string name="confirm">确认</string>
     <string name="activity_title_add_new_account">新增充值账户</string>
+    <string name="activity_title_new_account_success">添加成功</string>
 </resources>
