--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">云缴费</string>
     <string name="verification_code">验证码</string>
+    <string name="input_password">输入密码</string>
     <string name="get_verification_code">获取验证码</string>
-    <string name="pwd_prompt">密码长度6–20位</string>
+    <string name="pwd_prompt">密码长度6–20位必须包含字母和数字</string>
     <string name="phone_prompt">输入手机号码</string>
     <string name="user_agreement">用户协议</string>
 
