--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">云缴费</string>
     <string name="verification_code">验证码</string>
-    <string name="input_password">输入密码</string>
+    <string name="input_password">输入6~20位密码</string>
     <string name="get_verification_code">获取验证码</string>
     <string name="pwd_prompt">密码长度6–20位必须包含字母和数字</string>
     <string name="phone_prompt">输入手机号码</string>
@@ -21,4 +21,6 @@
     <string name="confirm">确认</string>
     <string name="activity_title_add_new_account">新增充值账户</string>
     <string name="activity_title_new_account_success">添加成功</string>
+    <string name="tab_home">首页</string>
+    <string name="tab_my">我的</string>
 </resources>
