--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="activity_title_address_select">选择燃气公司</string>
     <string name="tab_home">首页</string>
     <string name="tab_my">我的</string>
+    <string name="cancel">取消</string>
+    <string name="search">搜索</string>
 </resources>
