添加用户协议

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="activity_title_address_select">选择燃气公司</string>
     <string name="tab_home">首页</string>
     <string name="tab_my">我的</string>
+    <string name="iot_card">物联网卡</string>
 </resources>
