--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="payment_account">缴费账户</string>
     <string name="payment_type">付款方式</string>
     <string name="payment_time">缴费时间</string>
+    <string name="loading">加载中...</string>
 </resources>
