--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="payment_type">付款方式</string>
     <string name="payment_time">缴费时间</string>
     <string name="loading">加载中...</string>
+    <string name="hint_input_city_search">输入城市名/拼音或者字母查询</string>
 </resources>
