--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="activity_title_new_account_success">添加成功</string>
     <string name="activity_title_address_select">选择燃气公司</string>
     <string name="activity_title_payments">燃气充值</string>
-    <string name="activity_title_payments_history">燃气充值</string>
+    <string name="activity_title_payments_history">充值记录</string>
     <string name="tab_home">首页</string>
     <string name="tab_my">我的</string>
     <string name="cancel">取消</string>
