--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,7 @@
     <string name="recharge">充值</string>
     <string name="login_verification_code">验证码登录</string>
     <string name="login_password">密码登录</string>
+    <string name="about">关于</string>
+    <string name="copyright_notice">新奥阳光易采科技有限公司版权所有</string>
+    <string name="welcome_prompt">缴费一站式服务平台</string>
 </resources>
