--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="pay_account">缴费户号</string>
     <string name="hint_input_pay_account">请输入缴费户号</string>
     <string name="input_account_help">如何查户号</string>
-    <string name="input_account_alert">目前仅支持物联卡表缴费</string>
+    <string name="input_account_alert">目前仅支持物联网表缴费</string>
     <string name="read_and_agree">我已阅读并同意</string>
     <string name="protocol_title">《云缴费用户协议》</string>
     <string name="confirm_account">账户信息</string>
